--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,23 @@
-<nz-layout class="mainlayout">
-  <nz-sider>
-    <div style="width:100%;padding:5px 5px;text-align: left;">
-      <button nz-button nzType="primary" [nzSize]="'small'" (click)="addClick()"><span nz-icon
-          nzType="plus"></span></button>
-    </div>
-    <ul nz-menu nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <li *ngFor="let item of configs;index as i;" nz-menu-item nz-tooltip nzTooltipPlacement="right" nzSelected
-        (contextmenu)="onRightClick($event,i)">
-        <span nz-icon nzType="setting"></span>
-        <span>{{item.name}}</span>
-      </li>
-    </ul>
-  </nz-sider>
-  <nz-layout>
-    <nz-content>Content</nz-content>
+<nz-spin nzTip="Loading..." [nzSpinning]="isSpinning">
+  <nz-layout class="mainlayout">
+    <nz-sider>
+      <div style="width:100%;padding:5px 5px;text-align: left;">
+        <button nz-button nzType="primary" [nzSize]="'small'" (click)="addClick()"><span nz-icon
+            nzType="plus"></span></button>
+      </div>
+      <ul nz-menu nzMode="inline" [nzInlineCollapsed]="isCollapsed">
+        <li *ngFor="let item of configs;index as i;" nz-menu-item nz-tooltip nzTooltipPlacement="right"
+          [nzSelected]="i === currentIndex" (contextmenu)="onRightClick($event,i)" (click)="itemClick($event,i)">
+          <span nz-icon nzType="setting"></span>
+          <span>{{item.name}}</span>
+        </li>
+      </ul>
+    </nz-sider>
+    <nz-layout>
+      <nz-content>
+        <app-main-content [sqlConfig]="configs[currentIndex]"></app-main-content>
+      </nz-content>
+    </nz-layout>
   </nz-layout>
-</nz-layout>
+</nz-spin>
 <app-sqlconfig-setting></app-sqlconfig-setting>
