--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -14,6 +14,6 @@ nz-sider {
 nz-content {
   background: #fff;
   min-height: 120px;
-  line-height: 120px;
+  // line-height: 120px;
   height: 100%;
 }
