--- a/src/app/myComponent/sqlconfig-setting/sqlconfig-setting.component.html
+++ b/src/app/myComponent/sqlconfig-setting/sqlconfig-setting.component.html
@@ -5,9 +5,15 @@
   <ng-template #modalContent>
     <form nz-form>
       <nz-form-item>
+        <nz-form-label [nzSpan]="6" nzFor="name">Config Name</nz-form-label>
+        <nz-form-control [nzSpan]="14">
+          <input nz-input name="configName" type="text" id="configName" [(ngModel)]="currentConfig.name" />
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
         <nz-form-label [nzSpan]="6" nzFor="filePath">Script File Path</nz-form-label>
         <nz-form-control [nzSpan]="14">
-          <input nz-input name="filePath" type="text" id="filePath" [(ngModel)]="currentConfig.name" />
+          <input nz-input name="filePath" type="text" id="filePath" [(ngModel)]="currentConfig.filepath" />
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
@@ -45,7 +51,7 @@
   </ng-template>
 
   <ng-template #modalFooter>
-    <button nz-button nzType="primary" (click)="TestSqlConnect()">Test Connect</button>
+    <button nz-button nzType="primary" (click)="TestSqlConnect()" [nzLoading]="isConfirmLoading">Test Connect</button>
     <button nz-button nzType="primary" (click)="handleOk()" [nzLoading]="isConfirmLoading">Submit</button>
     <button nz-button nzType="default" (click)="handleCancel()">Cancel</button>
   </ng-template>
