--- a/src/app/myComponent/main-content/main-content.component.less
+++ b/src/app/myComponent/main-content/main-content.component.less
@@ -7,8 +7,14 @@
   text-align: left;
 }
 
+.script-running-detail {
+  margin-top: 2rem;
+  text-align: center;
+}
+
 .logbox {
   // text-align: left;
   width: 100%;
   height: 300px;
+  overflow: auto;
 }
